[gd_scene load_steps=11 format=3 uid="uid://thugoishi0a4"]

[ext_resource type="Script" path="res://weapons/octobot.gd" id="1_jq7vy"]
[ext_resource type="Shader" uid="uid://bnaid0lqr6yb2" path="res://UI/hit_flash.tres" id="2_iax6d"]
[ext_resource type="Texture2D" uid="uid://dhy4cfvkn3v8v" path="res://ASSETS/octopath.png" id="2_qk5dj"]
[ext_resource type="Texture2D" uid="uid://c7jo4yy3tg38d" path="res://ASSETS/bullet.png" id="3_hynj8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fw2hf"]
radius = 39.0128

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7kcog"]
resource_local_to_scene = true
shader = ExtResource("2_iax6d")
shader_parameter/enabled = true
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_6mfir"]
radius = 7.5

[sub_resource type="Animation" id="Animation_shwo5"]
resource_name = "hit_flash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Octopath:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_rks3w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Octopath:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vg8f1"]
_data = {
"RESET": SubResource("Animation_rks3w"),
"hit_flash": SubResource("Animation_shwo5")
}

[node name="octobot" type="CharacterBody2D"]
script = ExtResource("1_jq7vy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_fw2hf")
debug_color = Color(0.889506, 0.0416938, 0.782801, 0.42)

[node name="Octopath" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_7kcog")
scale = Vector2(3, 3)
texture = ExtResource("2_qk5dj")

[node name="lock1" type="Node2D" parent="."]

[node name="hit" type="Area2D" parent="lock1"]
collision_layer = 2
collision_mask = 2

[node name="Bullet1" type="Sprite2D" parent="lock1/hit"]
position = Vector2(-55, 0)
scale = Vector2(2, 2)
texture = ExtResource("3_hynj8")

[node name="Bullet5" type="Sprite2D" parent="lock1/hit"]
position = Vector2(56, 0)
scale = Vector2(2, 2)
texture = ExtResource("3_hynj8")

[node name="1" type="CollisionShape2D" parent="lock1/hit"]
position = Vector2(-55, 0)
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_6mfir")

[node name="5" type="CollisionShape2D" parent="lock1/hit"]
position = Vector2(56, 0)
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_6mfir")

[node name="Bullet2" type="Sprite2D" parent="lock1/hit"]
position = Vector2(-96, 0)
scale = Vector2(2, 2)
texture = ExtResource("3_hynj8")

[node name="Bullet6" type="Sprite2D" parent="lock1/hit"]
position = Vector2(96, 0)
scale = Vector2(2, 2)
texture = ExtResource("3_hynj8")

[node name="2" type="CollisionShape2D" parent="lock1/hit"]
position = Vector2(-96, 0)
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_6mfir")

[node name="6" type="CollisionShape2D" parent="lock1/hit"]
position = Vector2(96, 0)
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_6mfir")

[node name="Bullet3" type="Sprite2D" parent="lock1/hit"]
position = Vector2(-136, 0)
scale = Vector2(2, 2)
texture = ExtResource("3_hynj8")

[node name="Bullet7" type="Sprite2D" parent="lock1/hit"]
position = Vector2(136, 0)
scale = Vector2(2, 2)
texture = ExtResource("3_hynj8")

[node name="3" type="CollisionShape2D" parent="lock1/hit"]
position = Vector2(-136, 0)
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_6mfir")

[node name="7" type="CollisionShape2D" parent="lock1/hit"]
position = Vector2(136, 0)
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_6mfir")

[node name="Bullet4" type="Sprite2D" parent="lock1/hit"]
position = Vector2(-176, 0)
scale = Vector2(2, 2)
texture = ExtResource("3_hynj8")

[node name="Bullet10" type="Sprite2D" parent="lock1/hit"]
position = Vector2(-216, 0)
scale = Vector2(2, 2)
texture = ExtResource("3_hynj8")

[node name="Bullet8" type="Sprite2D" parent="lock1/hit"]
position = Vector2(176, 0)
scale = Vector2(2, 2)
texture = ExtResource("3_hynj8")

[node name="Bullet9" type="Sprite2D" parent="lock1/hit"]
position = Vector2(216, 0)
scale = Vector2(2, 2)
texture = ExtResource("3_hynj8")

[node name="4" type="CollisionShape2D" parent="lock1/hit"]
position = Vector2(-176, 0)
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_6mfir")

[node name="10" type="CollisionShape2D" parent="lock1/hit"]
position = Vector2(-216, 0)
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_6mfir")

[node name="8" type="CollisionShape2D" parent="lock1/hit"]
position = Vector2(176, 0)
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_6mfir")

[node name="9" type="CollisionShape2D" parent="lock1/hit"]
position = Vector2(216, 0)
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_6mfir")

[node name="hit2" type="Area2D" parent="lock1"]
rotation = 1.5708
collision_layer = 2
collision_mask = 2

[node name="Bullet1" type="Sprite2D" parent="lock1/hit2"]
position = Vector2(-55, 0)
scale = Vector2(2, 2)
texture = ExtResource("3_hynj8")

[node name="Bullet5" type="Sprite2D" parent="lock1/hit2"]
position = Vector2(56, 0)
scale = Vector2(2, 2)
texture = ExtResource("3_hynj8")

[node name="1" type="CollisionShape2D" parent="lock1/hit2"]
position = Vector2(-55, 0)
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_6mfir")

[node name="5" type="CollisionShape2D" parent="lock1/hit2"]
position = Vector2(56, 0)
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_6mfir")

[node name="Bullet2" type="Sprite2D" parent="lock1/hit2"]
position = Vector2(-96, 0)
scale = Vector2(2, 2)
texture = ExtResource("3_hynj8")

[node name="Bullet6" type="Sprite2D" parent="lock1/hit2"]
position = Vector2(96, 0)
scale = Vector2(2, 2)
texture = ExtResource("3_hynj8")

[node name="2" type="CollisionShape2D" parent="lock1/hit2"]
position = Vector2(-96, 0)
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_6mfir")

[node name="6" type="CollisionShape2D" parent="lock1/hit2"]
position = Vector2(96, 0)
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_6mfir")

[node name="Bullet3" type="Sprite2D" parent="lock1/hit2"]
position = Vector2(-136, 0)
scale = Vector2(2, 2)
texture = ExtResource("3_hynj8")

[node name="Bullet7" type="Sprite2D" parent="lock1/hit2"]
position = Vector2(136, 0)
scale = Vector2(2, 2)
texture = ExtResource("3_hynj8")

[node name="3" type="CollisionShape2D" parent="lock1/hit2"]
position = Vector2(-136, 0)
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_6mfir")

[node name="7" type="CollisionShape2D" parent="lock1/hit2"]
position = Vector2(136, 0)
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_6mfir")

[node name="Bullet4" type="Sprite2D" parent="lock1/hit2"]
position = Vector2(-176, 0)
scale = Vector2(2, 2)
texture = ExtResource("3_hynj8")

[node name="Bullet10" type="Sprite2D" parent="lock1/hit2"]
position = Vector2(-216, 0)
scale = Vector2(2, 2)
texture = ExtResource("3_hynj8")

[node name="Bullet8" type="Sprite2D" parent="lock1/hit2"]
position = Vector2(176, 0)
scale = Vector2(2, 2)
texture = ExtResource("3_hynj8")

[node name="Bullet9" type="Sprite2D" parent="lock1/hit2"]
position = Vector2(216, 0)
scale = Vector2(2, 2)
texture = ExtResource("3_hynj8")

[node name="4" type="CollisionShape2D" parent="lock1/hit2"]
position = Vector2(-176, 0)
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_6mfir")

[node name="10" type="CollisionShape2D" parent="lock1/hit2"]
position = Vector2(-216, 0)
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_6mfir")

[node name="8" type="CollisionShape2D" parent="lock1/hit2"]
position = Vector2(176, 0)
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_6mfir")

[node name="9" type="CollisionShape2D" parent="lock1/hit2"]
position = Vector2(216, 0)
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_6mfir")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vg8f1")
}

[connection signal="body_entered" from="lock1/hit" to="." method="_on_hit_body_entered"]
[connection signal="body_entered" from="lock1/hit2" to="." method="_on_hit_2_body_entered"]
